[tool.poetry]
name = "mrfmsim-plot"
version = "0.1.0"
description = "Plotting functions for magnetic resonance force microscopy experiments"
authors = ["Peter Sun <hs859@cornell.edu>"]
maintainers = ["Peter Sun <hs859@cornell.edu>"]
repository = "https://www.github.edu/Marohn-Group/mrfmsim-plot"
readme = "README.rst"
packages = [
    { include = "mrfmsim_plot/*.py" }
]

[tool.poetry.dependencies]
python = ">=3.10"
# vtk >= 9.2.6 see readme for installation
mrfmsim = { git = "https://github.com/marohn-group/mrfmsim", branch="develop" }
mayavi = ">=4.7.2"
pyside6 = ">=6.1.0"
pyvista = ">=0.42.3"
trame = ">=3.2.7"
ipywidgets = ">=8.1.1"
colorcet = ">=3.0.0"
pytest = { version = ">=7.1.1", optional = true }
pytest-cov = { version = ">=3.0.0", optional = true }


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.poetry.plugins."mrfmsim_plugin"]
plot = "mrfmsim_plot"

[tool.pytest.ini_options]
filterwarnings = [
    # the plot plugin's mayavi package has a deprecation warning
    'ignore::DeprecationWarning',
]

[tool.coverage.run]
# pytest coverage
source_pkgs = [
    'mrfmsim_plot',
]
omit = ['tests/*']
